js 내장객체 문서 수정

--- a/JavaScript/2021년 06월 25일 (금) - 내장 객체.md
+++ b/JavaScript/2021년 06월 25일 (금) - 내장 객체.md
@@ -19,8 +19,28 @@
   myObject.name = "Hello"
   ```
 
+![2](https://user-images.githubusercontent.com/48499094/123571669-afc08d00-d805-11eb-9a47-6ba0e1076baa.jpg)
 
+```html
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Page Title</title>
+  </head>
+  <body>
+    <script>
 
+      var number1 = 123;
+
+      var number2 = new Number(123);
+
+      document.write(number1 + " number1의 타입은? " + typeof number1,"<br>");   // 123 number1의 타입은? number
+
+      document.write(number2 + " number2의 타입은? " + typeof number2,"<br>");   // 123 number2의 타입은? object
+    </script>
+  </body>
+</html>
+```
 
 #### 1. Date Object (날짜 정보 객체)
 
@@ -259,6 +279,8 @@ var d = new Array(30, “홍길동”, true);
 var d = [30, “홍길동”, true];
 ```
 
+![01](https://user-images.githubusercontent.com/48499094/123577959-c1a72d80-d80f-11eb-834e-890ed514b7f3.jpg)
+
 | 종류                  | 설명                                                         |
 | --------------------- | ------------------------------------------------------------ |
 | join(연결문자)        | 배열 객체에 데이터를 연결 문자 기준으로 1개의 문자형 데이터로 반환 |
@@ -281,18 +303,18 @@ var d = [30, “홍길동”, true];
 
 | 종류                         | 설명                                                         |
 | ---------------------------- | ------------------------------------------------------------ |
-| charAt(index)                | 문자열에서 인덱스 번호에 해당하는 문자를 반환 예) var str ="web he she";str.charAt(2);"b"를 반환함 |
-| indexOf(“찾을 문자”)         | 문자열에서 왼쪽부터 찾을 문자와 일치하는 문자를 찾아 **최초로 일치**하는 문자의 **인덱스 번호를 반환**. 만일 찾는 문자가 없으면 –1을 반환 예) var str="web he she he";str.indexOf("he");4를 반환함 |
-| lastIndexOf(“찾을 문자”)     | 문자열에서 오른쪽에서부터 찾을 문자와 일치하는 문자를 찾아 **최초로 일치**하는 인덱스 번호를 반환. 만일 찾는 문자가 없으면 –1을 반환.예) var str ="web he she he";str.lastIndexOf("he");11을 반환함 |
-| match(“찾을 문자”)           | 문자열에서 왼쪽부터 찾을 문자와 일치하는 문자를 찾아 **최초로 찾은** **문자를 반환**  만일 찾는 문자가 없으면 null을 반환 예) var str="web he she he";str.match("body");null을 반환함 |
-| replace(“바꿀문자”,“새문자”) | 문자열에서 왼쪽부터 바꿀 문자와 일치하는 문자를 찾아 **최초로 찾은 문자를 새 문자로 치환** 예) var str="web he she";str.replace("web","html");"html he she"를 반환함 |
-| search(“찾을 문자”)          | 문자열에서 왼쪽부터 찾을 문자와 일치하는 문자를 찾아 **최초로 일치하는 인덱스 번호를 반환**예) var str="web he she";str.search("he");4를 반환함 |
-| slice(a,b)                   | a개의 문자를 자르고 b번째 이후에 문자를 자른 후 **남은 문자를 반환**합니다.예) var str ="hello javascript"str.slice(3,7);“lo j”를 반환함str.slice(3,7);은 문자열에서 3글자 “hel”까지 자르고 7번째 이후 “j” 이후부터 “avascript”를 자른 후 나머지 “lo j”를 반환합니다.예) var str ="hello javascript"str.slice(3,-3);“llo javascr”를 반환함여기에서 –1은 뒤에서부터 1글자를 가리킵니다. |
-| substring(a,b)               | a인덱스부터 b인덱스 이전 구간의 **문자를 반환**합니다.예) var str = "hello javascript"str.substring(3, 7);"lo j"를 반환함var str = "hello javascript"str.substring(3,-3);"hel"0 반환함여기에서 –3은 인덱스 0을 가리킵니다. 그러므로 0부터 인텍스 3이전 구간의 문자를 구해옵니다. |
-| substr(a, 문자 개수)         | 문자열에 a 인덱스부터 **지정한 문자 개수만큼 문자열을 반환**합니다.예) var str ="hello javascript"str.substring(3,2);"lo"를 반환함str.str(3,2); 은 문자열에서 인덱스 3인 "l"부터 2글자를 가져와서 "lo"가 반환됩니다. |
+| charAt(index)                | 문자열에서 인덱스 번호에 해당하는 **문자를 반환** 예) var str ="web he she";       str.charAt(2);          "b"를 반환함 |
+| indexOf(“찾을 문자”)         | 문자열에서 **왼쪽부터** 찾을 문자와 일치하는 문자를 찾아 **최초로 일치**하는 문자의 **인덱스 번호를 반환**. 만일 찾는 문자가 없으면 –1을 반환 예) var str="web he she he";       str.indexOf("he");      4를 반환함 |
+| lastIndexOf(“찾을 문자”)     | 문자열에서 **오른쪽에서부터** 찾을 문자와 일치하는 문자를 찾아 **최초로 일치**하는 인덱스 번호를 반환. 만일 찾는 문자가 없으면 –1을 반환.예) var str ="web he she he";        str.lastIndexOf("he");       11을 반환함 |
+| match(“찾을 문자”)           | 문자열에서 왼쪽부터 찾을 문자와 일치하는 문자를 찾아 **최초로 찾은** **문자를 반환**  만일 찾는 문자가 없으면 null을 반환 예) var str="web he she he";         str.match("body");             null을 반환함 |
+| replace(“바꿀문자”,“새문자”) | 문자열에서 왼쪽부터 바꿀 문자와 일치하는 문자를 찾아 **최초로 찾은 문자를 새 문자로 치환** 예) var str="web he she";       str.replace("web","html");           "html he she"를 반환함 |
+| search(“찾을 문자”)          | 문자열에서 왼쪽부터 찾을 문자와 일치하는 문자를 찾아 **최초로 일치하는 인덱스 번호를 반환**예) var str="web he she";   str.search("he");   4를 반환함 |
+| slice(a,b)                   | a개의 문자를 자르고 b번째 이후에 문자를 자른 후 **남은 문자를 반환**합니다.예) var str ="hello javascript"str.slice(3,7);     “lo j”를 반환함str.slice(3,7);은 문자열에서 3글자 “hel”까지 자르고 7번째 이후 “j” 이후부터 “avascript”를 자른 후 나머지 “lo j”를 반환합니다.예) var str ="hello javascript"        str.slice(3,-3);        “llo javascr”를 반환함. 여기에서 –1은 뒤에서부터 1글자를 가리킵니다. |
+| substring(a,b)               | a인덱스부터 b인덱스 이전 구간의 **문자를 반환**합니다.예) var str = "hello javascript"      str.substring(3, 7);      "lo j"를 반환함      var str = "hello javascript"      str.substring(3,-3);       "hel"0 반환함여기에서 –3은 인덱스 0을 가리킵니다. 그러므로 0부터 인덱스 3이전 구간의 문자를 구해옵니다. |
+| substr(a, 문자 개수)         | 문자열에 a 인덱스부터 **지정한 문자 개수만큼 문자열을 반환**합니다.예) var str ="hello javascript"    str.substring(3,2);     "lo"    를 반환함   str.str(3,2); 은 문자열에서 인덱스 3인 "l"부터 2글자를 가져와서 "lo"가 반환됩니다. |
 | split(“문자”)                | 지정한 문자를 기준으로 문자 데이터를 나누어 배열에 저장하여 반환합니다. 예) var str ="webkmobilek2002";   var arr=str.split("k");   arr; |
-| toLowerCase()                | 문자열에서 **영문 대문자를 모두 소문자로 변환**.예) var str ="ABC";str.toLowerCase();"abc"를 반환함 |
-| toUpperCase()                | 문자열에서 **영문 소문자를 모두 대문자로 변환**.예) var str ="abc";str.toUpperCase();"ABC"를 반환함 |
+| toLowerCase()                | 문자열에서 **영문 대문자를 모두 소문자로 변환**.예) var str ="ABC";  str.toLowerCase();              "abc"를 반환함 |
+| toUpperCase()                | 문자열에서 **영문 소문자를 모두 대문자로 변환**.예) var str ="abc";    str.toUpperCase();         "ABC"를 반환함 |
 | length                       | 문자열에서 **문자의 개수를 반환**합니다.예) var str ="hello welcome";  str.length13을 반환함 |
 | concat(“새로운 문자”)        | 문자열에서 **새로운 문자열을 결합**.예) var str ="hello"; str.concat("web");"hello web"을 반환함 |
 | charCodeAt(“찾을 문자”)      | 찾을 문자의 **아스키 코드 값을 반환** str="A";예) str.charCodeAt("A"); // 6565를 반환함 |
@@ -465,4 +487,18 @@ var d = [30, “홍길동”, true];
   </body>
 </html>
 ```
+
+
+
+#### 7. Object
+
+
+
+#### 8. Function
+
+
+
+#### 9. Boolean
+
+* Boolean 객체는 불리언 값을 감싸고 있는 객체이다
 
