js 내장객체 문서 수정

--- a/JavaScript/2021년 06월 25일 (금) - 내장 객체.md
+++ b/JavaScript/2021년 06월 25일 (금) - 내장 객체.md
@@ -94,9 +94,9 @@
         
       var m = new Date(2002,4,31); // 2002(5.31)월드컵 날짜객체 생성
 
-      var theMonth = m.getMonth(); //날짜 객체에서 월
-      var theDate = m.getDate(); //날짜 객체에서 일
-      var theDay = m.getDay(); //날짜 객체에서 요일
+      var theMonth = m.getMonth(); // 날짜 객체에서 월
+      var theDate = m.getDate();   // 날짜 객체에서 일
+      var theDay = m.getDay();     // 날짜 객체에서 요일
 
       document.write("2002 월드컵 몇 월 : " + theMonth + "<br>");
       document.write("2002 월드컵 몇 일 : " + theDate + "<br>");
@@ -115,18 +115,17 @@
   </head>
   <body>
     <script >
-      var t = new Date(); //오늘 날짜 개체를 생성
-      var nowYear = t.getFullYear(); //오늘 날짜의 연도 정보
-      //현재 연도에 12월 31 날짜 객체를 생성
-      var theDate = new Date(nowYear,11,31);
+      var t = new Date(); // 오늘 날짜 개체를 생성
+      var nowYear = t.getFullYear(); // 오늘 날짜의 연도 정보
+      var theDate = new Date(nowYear,11,31); //현재 연도에 12월 31 날짜 객체를 생성
 
-      var diffDate = theDate - t; //연말까지 남은 기간 = 연말 날짜 - 현재 날짜
+      var diffDate = theDate - t; // 연말까지 남은 기간 = 연말 날짜 - 현재 날짜
 
-      //밀리초를 일로 계산
+      // 밀리초를 일로 계산
       var result = Math.ceil( diffDate / (1000 * 60 * 60 * 24) );
 
-      //남은 일수를 출력
-      document.write("현재일로 부터 올해 말일까진 "+result+"일 남았습니다.");
+      // 남은 일수를 출력
+      document.write("현재일로 부터 올해 말일까진 " + result + " 일 남았습니다.");
     </script>
   </body>
 </html>
@@ -208,18 +207,18 @@
 
 * 수학과 관련한 기능과 속성을 제공
 
-| 종류                        | 설명                                         |
-| --------------------------- | -------------------------------------------- |
-| Math.abs(숫자)              | 숫자의 절댓값을 반환                         |
-| Math.max(숫자1,숫자2,숫자3) | 숫자들 중 가장 큰 값 반환                    |
-| Math.min(숫자1,숫자2,숫자3) | 숫자들 중 가장 작은 값 반환                  |
-| Math.pow(숫자,제곱값)       | 숫자의 거듭 제곱한 값을 반환                 |
-| Math.random()               | 0 ~ 1 사이의 난수를 반환                     |
-| Math.round(숫자)            | 소수점 첫째 자리에서 반올림하여 정수 반환    |
-| Math.ceil(숫자)             | 소수점 첫째 자리에서 올림을 해서 정수를 반환 |
-| Math.floor(숫자)            | 소수점 첫째 자리에서 버림을 해서 정수를 반환 |
-| Math.sqrt(숫자)             | 숫자의 제곱근 값을 반환                      |
-| Math.PI                     | 원주율 상수를 반환                           |
+| 종류                        | 설명                                             |
+| --------------------------- | ------------------------------------------------ |
+| Math.abs(숫자)              | 숫자의 **절댓값**을 반환                         |
+| Math.max(숫자1,숫자2,숫자3) | 숫자들 중 **가장 큰 값** 반환                    |
+| Math.min(숫자1,숫자2,숫자3) | 숫자들 중 **가장 작은 값** 반환                  |
+| Math.pow(숫자,제곱값)       | 숫자의 **거듭 제곱한 값**을 반환                 |
+| Math.random()               | **0 ~ 1 사이의 난수**를 반환                     |
+| Math.round(숫자)            | 소수점 첫째 자리에서 **반올림**하여 정수 반환    |
+| Math.ceil(숫자)             | 소수점 첫째 자리에서 **올림**을 해서 정수를 반환 |
+| Math.floor(숫자)            | 소수점 첫째 자리에서 **버림**을 해서 정수를 반환 |
+| Math.sqrt(숫자)             | 숫자의 **제곱근 값**을 반환                      |
+| Math.PI                     | **원주율 상수**를 반환                           |
 
 ```html
 <!DOCTYPE html>
@@ -237,7 +236,7 @@
       var floorNum = Math.floor(num); // 소수점 내림 후 반환
       var ceilNum = Math.ceil(num); // 소수점 올림 후 반환
       var rndNum = Math.random(); // 0~1 사이 난수를 발생
-      var piNum = Math.PI; //Math.PI는 원주율 상수를 반환
+      var piNum = Math.PI; // Math.PI는 원주율 상수를 반환
 
       document.write(maxNum,"<br>");    // 30
 
@@ -289,11 +288,11 @@ var d = [30, “홍길동”, true];
 | slice(index1, index2) | 배열 객체에 데이터 중 원하는 인덱스 구간만큼 잘라서 배열 객체로 가져온다 |
 | splice()              | 배열 객체에 지정 데이터를 삭제하고 그 구간에 새 데이터를 삽입할 수 있다 |
 | concat()              | 2개의 배열 객체를 하나로 결합                                |
-| pop()                 | 배열에 저장된 데이터 중 마지막 인덱스에 저장된 데이터를 삭제 |
-| push(new data)        | 배열 객체에 마지막 인덱스에 새 데이터를 삽입                 |
-| shift()               | 배열 객체에 저장된 데이터 중 첫 번째 인덱스에 저장된 데이터를 삭제 |
-| unshift(new data)     | 배열 객체의 가장 앞의 인덱스에 새 데이터를 삽입              |
-| length                | 배열에 저장된 총 데이터의 갯수를 반환                        |
+| pop()                 | 배열에 저장된 데이터 중 **마지막 인덱스에 저장된 데이터를 삭제** |
+| push(new data)        | 배열 객체에 **마지막 인덱스에 새 데이터를 삽입**             |
+| shift()               | 배열 객체에 저장된 데이터 중 **첫 번째 인덱스에 저장된 데이터를 삭제** |
+| unshift(new data)     | 배열 객체의 **첫 번째 인덱스에 새 데이터를 삽입**            |
+| length                | 배열에 **저장된 총 데이터의 갯수를 반환**                    |
 
 
 
@@ -382,7 +381,7 @@ var d = [30, “홍길동”, true];
 
 `var myRegExp = new RegExp(패턴, 검색옵션)`
 
-* 정규 표현 검색 옵션
+* 정규 표현 **검색 옵션**
 
 | 종류              | 설명                                                         |
 | ----------------- | ------------------------------------------------------------ |
