--- a/JavaScript/2021년 07월 05일 (월) - jquery.md
+++ b/JavaScript/2021년 07월 05일 (월) - jquery.md
@@ -26,3 +26,52 @@ Jquery
 | Traversing (가로지르다)     | Siblings (형제)    | <div>div (parent)<p>p</p><span>span</span><h2>h2</h2><h3>h3</h3><p>p</p></div>$("h2").siblings().css({"color": "red", "border": "2px solid red"}); |
 | Traversing (가로지르다)     | Filtering          | <p>My name is Donald (index 0).</p><p>Donald Duck (index 1).</p>$("p").eq(1).css("background-color", "yellow"); |
 
+
+
+
+
+**정규표현식 특수 문자**  정규 표현식은 **주어진 패턴에 일치하는 문자열**을 찾기 위해 하용하는 **검색 패턴**이다.
+
+| 문자   | 일치                                                  | 예제                                                         |
+| ------ | ----------------------------------------------------- | ------------------------------------------------------------ |
+| ^      | 입력값의 시작                                         | /^This/ 는 "This is.." 와 일치                               |
+| $      | 입력값의 끝                                           | /end/는 "This is the end" 와 일치                            |
+| *      | 0번 이상 반복                                         | /se*/는 "seeee"와 "se"에 일치                                |
+| ?      | 0번 또는 1번 반복                                     | /ap?/는 "apple" 과 "and"에 일치                              |
+| +      | 1번 이상 반복                                         | /ap+/는 "apple"에는 일치. "apie"에는 불일치                  |
+| {n}    | 정확히 n번 반복                                       | /ap{2}는 "apple"에는 일치. "apie"에는 불일치                 |
+| {n,}   | n번 이상 반복                                         | /ap{2,}는 "apple"과 "apple"의 모든 p에 일치. "apie"에는 불일치 |
+| {n,m}  | 최소 n번, 최대 m번                                    | /a,p{2,4}/는 "appppppple"의 p 4개에 일치                     |
+| .      | 줄 바꿈을 제외한 모든문자                             | /a,e/는 "ape"와 "axe"에 일치                                 |
+| [^...] | 대괄호 안의 문자를 제외한 모든문자                    | /a[^px]/는 "ale"에는 일치. "axe"나 "ape"에는 불일치          |
+| \b     | 단어 경계                                             | /\bno/는 "nono"에서 첫번째 "no"에 일치                       |
+| \B     | 단어 경계를 제외한 모든문자                           | /\Bno/는 "nono"에서 두번째 "no"에 일치                       |
+| \d     | 0부터 9까지의 숫자                                    | /\d{3}는 "Now in 123"에서 123에 일치                         |
+| \D     | 숫자를 제외한 모든문자                                | /\D{2,4}/는 "Now in 123" 에서 "Now"에 일치                   |
+| \w     | 단어 문자(알파벳,숫자,밑줄)                           | /\w/는 "javascript"에서 "j"에 일치                           |
+| \W     | 단어 문자가 아닌 문자  (알파벳,숫자,밑줄이 아닌 문자) | /\W/는 "100%"에서 "%"에 일치                                 |
+| \n     | 줄바꿈                                                |                                                              |
+| \s     | 하나의 공백 문자                                      |                                                              |
+| \S     | 공백 문자가 아닌 모든 문자                            |                                                              |
+| \t     | 탭                                                    |                                                              |
+| (x)    | 캡쳐할 괄호                                           | 일치한 문자들 기억                                           |
+| [...]  | 대괄호 안의 모든문자                                  | /a[px]e/는 "ape" 와 "axe"에 일치. "ale"에는 불일치           |
+
+
+
+
+
+**가상요소**
+가상 클래스([`pseudo-classes`](https://developer.mozilla.org/ko/docs/Web/CSS/pseudo-classes))처럼, 가상 요소(pseudo-element)는 선택자(selector)에 추가되지만 특별한 상태를 기술하는 대신, 문서의 특정 부분을 스타일할 수 있습니다. 예를 들어, [`::first-line`](https://developer.mozilla.org/ko/docs/Web/CSS/::first-line) 가상 요소는 선택자에 의해 지정된 요소의 첫 줄만을 대상으로 합니다.
+
+- [`::after`](https://developer.mozilla.org/ko/docs/Web/CSS/::after)
+- [`::before`](https://developer.mozilla.org/ko/docs/Web/CSS/::before)
+- [`::first-letter`](https://developer.mozilla.org/ko/docs/Web/CSS/::first-letter)
+- [`::first-line`](https://developer.mozilla.org/ko/docs/Web/CSS/::first-line)
+- [`::selection`](https://developer.mozilla.org/ko/docs/Web/CSS/::selection)
+- [`::backdrop`](https://developer.mozilla.org/ko/docs/Web/CSS/::backdrop)
+- [`::placeholder`](https://developer.mozilla.org/ko/docs/Web/CSS/::placeholder) 
+- [`::marker`](https://developer.mozilla.org/ko/docs/Web/CSS/::marker) 
+- [`::spelling-error`](https://developer.mozilla.org/ko/docs/Web/CSS/::spelling-error) 
+- ::grammar-error
+
