07/07 jquery 문서 내용 추가

--- a/JavaScript/2021년 07월 05일 (월) - jquery.md
+++ b/JavaScript/2021년 07월 05일 (월) - jquery.md
@@ -4,6 +4,10 @@ Jquery
 
 
 
+`<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.0.min.js"></script>`
+
+
+
 | Selectors                   | id                 | $("#test").hide();                                           |
 | --------------------------- | ------------------ | ------------------------------------------------------------ |
 | **Events**                  | click              | $("button").click();                                         |
@@ -74,4 +78,96 @@ Jquery
 - [`::marker`](https://developer.mozilla.org/ko/docs/Web/CSS/::marker) 
 - [`::spelling-error`](https://developer.mozilla.org/ko/docs/Web/CSS/::spelling-error) 
 - ::grammar-error
+
+
+
+
+
+**기본 선택자 종류**
+
+| 구분             | 종류                       | 사용법                                        | 설명                                                         |
+| ---------------- | -------------------------- | --------------------------------------------- | ------------------------------------------------------------ |
+| 직접 선택자      | 전체 선택자                | $("*")                                        | 모든 요소를 선택합니다.                                      |
+|                  | 아이디 선택자              | $("#아이디명")                                | id 속성에 지정한 값을 가진요소를 선택합니다.                 |
+|                  | 클래스 선택자              | $(".클래스명")                                | class 속성에 지정한 값을 가진요소를 선택합니다.              |
+|                  | 요소명 선택자              | $("요소명")                                   | 지정한 요소명과 일치하는요소들만 선택합니다.                 |
+|                  | 그룹 선택자                | $("선택1, 선택2,선택3, 선택n")                | 선택1, 선택2, 선택 3...선택n에지정된 요소들을 한번에선택합니다. |
+| 인접 관련 선택자 | 부모 요소선택자            | $("요소선택").parent( )                       | 선택한 요소의 부모 요소를선택합니다.                         |
+|                  | 상위 요소선택자            | $("요소선택").parents( )                      | 선택한 요소의 상위 요소를모두 선택합니다.                    |
+|                  | 하위 요소선택자            | $("요소선택 하위 요소")                       | 선택한 요소에 지정한 하위요소를 선택합니다.                  |
+|                  | 자식 요소선택자            | $("요소선택>자식 요소")                       | 선택한 요소를 기준으로 자식관계에 지정한 요소만선택합니다.   |
+|                  | 자식 요소들선택자          | $("요소선택").children( )                     | 선택한 요소의 모든 자식요소를선택합니다.                     |
+|                  | 형(이전) 요소선택자        | $("요소선택").prev( )                         | 선택한 요소의 바로 이전 요소를선택합니다.                    |
+|                  | 형(이전) 요소들선택자      | $("요소선택").prevAll( )                      | 선택한 요소의 이전 요소 모두를선택합니다.                    |
+|                  | 지정 형(이전)요소들 선택자 | $("요소선택").prevUntill("요소명")            | 선택한 요소부터 지정한 요소의이전 요소까지 모두 선택합니다.  |
+|                  | 동생(다음)요소선택자       | $("요소선택").next( )$("요소선택 + 다음요소") | 선택한 요소의 다음 요소를선택합니다.                         |
+|                  | 동생(다음)요소들선택자     | $("요소선택").nextAll( )                      | 선택한 요소의 다음 요소 모두를선택합니다.                    |
+
+
+
+
+
+**위치 탐색 선택자 종류**
+
+| 종류                                           | 사용법                           | 설명                                                         |
+| ---------------------------------------------- | -------------------------------- | ------------------------------------------------------------ |
+| $("요소선택:first")$("요소선택").first( )      | $("li:first")   $("li").first( ) | 전체 <li>요소 중 첫번째요소만 선택합니다.                    |
+| $("요소선택:last")$("요소선택").last( )        | $("li:last")     $("li").last( ) | 전체 <li>요소 중 마지막요소만 선택합니다.                    |
+| $("요소선택:odd")                              | $("li:odd")                      | <li> 요소 그룹 중 [index] 홀수번째 요소만 선택합니다.        |
+| $("요소선택:even")                             | $("li:even")                     | <li> 요소 그룹 중 [index] 짝수번째 요소만 선택합니다.        |
+| $("요소선택:first-of-type")                    | $("li:first-of-type")            | <li> 요소 무리 중 첫번째 요소만 선택합니다.                  |
+| $("요소선택:last-of-type")                     | $("li:last-of-type")             | <li> 요소 무리 중 마지막 요소만 선택합니다.                  |
+| $("요소선택:nth-child(숫자)")                  | $("li:nth-child(3)")             | <li> 요소 무리 중 세 번째 요소만 선택합니다.                 |
+| $("요소선택:nth-child(숫자n)")                 | $("li:nth-child(3n)")            | <li> 요소 무리 중 중 3의 배수 번째 요소만선택합니다.         |
+| $("요소선택:nth-last-of-type(숫자)")           | $("li:nth-last-of-type(2)")      | <li>요소 무리 중 마지막위치로부터 두 번째에 있는 요소만 선택합니다. |
+| $("요소선택:only-child")                       | $("li:only-child")               | 부모 요소 내에 <li>요소가 1개뿐인 <li>요소만선택합니다.      |
+| $("요소선택:eq(index)")$("요소선택").eq(index) | $("li:eq(2)")  $("li").eq(2)     | <li>요소 중 인덱스 2에 참조하는 요소를 불러옵니다.           |
+| $("요소선택:gt(index)")                        | $("li:gt(1)")                    | <li>요소 중 인덱스 1보다 큰 인덱스가 참조하는 요소를 불러옵니다. |
+| $("요소선택:Lt(index)")                        | $("li:Lt(1)")                    | <li>요소 중 인덱스 1보다 작은 인텍스가 참조하는 요소를 불러옵니다. |
+| $("요소선택").slice(index)                     | $("li").slice(2)                 | <li>요소 중 인덱스 2부터 참조하는 요소를 불러옵니다.         |
+
+
+
+
+
+**속성 탐색 선택자 종류**
+
+| 종류                        | 사용법                   | 설명                                                         |
+| --------------------------- | ------------------------ | ------------------------------------------------------------ |
+| $("요소선택[속성]")         | $("li[title]")           | <li>요소 중 title 속성이포함된 요소만 선택합니다.            |
+| $("요소선택[속성=값]")      | $("li[title='리스트']")  | <li>요소 중 title속성값이 ‘리스트’인 요소만 선택합니다.      |
+| $("요소선택[속성^=텍스트]") | $("a[href^='http://']")  | <li>요소 중 href속성값이‘[http://’](http://xn--evg/)로 시작하는 요소만 선택합니다. |
+| $("요소선택[속성$=텍스트]") | $("a[href$='.com']")     | <li> 요소 중 href속성값이 ‘.com’으로 끝나는 요소만 선택합니다. |
+| $("요소선택[href*=텍스트]") | $("a[href*='easyspub']") | <li> 요소 중 href속성값 중에서 ‘easyspub’를 포함하는 요소만 선택합니다. |
+| $("요소선택:hidden")        | $("li:hidden")           | <li> 요소 중 숨겨져 있는 것만 선택합니다.                    |
+| $("요소선택:visible")       | $("li:visible")          | <li> 요소 중 보이는 것만 선택합니다.                         |
+| $(":text")                  | $(":text")               | <input> 요소 중 type 속성값이 “text”인 요소만 선택합니다.    |
+| $(":selected")              | $(":selected")           | selected 속성이 적용된요소만 선택합니다.                     |
+| $("checked")                | $(":checked")            | checked 속성이 적용된요소만 선택합니다.                      |
+
+
+
+| contains() | 선택한 요소 중 지정한 텍스트를 포함하는 요소만 선택          |
+| ---------- | ------------------------------------------------------------ |
+| has()      | 선택한 요소 중 지정한 태그를 포함하는 요소만 선택            |
+| not()      | 선택한 요소 중 지정한 요소만 제외하고 선택                   |
+| find()     | 요소에서 지정한 요소를 다시 필터링해 선택                    |
+| closest()  | 선택한 요소에 지정한 상위 요소 중 가장 가까운 상위 요소를 찾아 선택 |
+| filter()   |                                                              |
+| contents() |                                                              |
+| end()      |                                                              |
+
+
+
+
+
+**선택자와 함께 사용하면 편리한 메소드들**
+
+| 종류              | 사용법                                                       | 설명                                                         |
+| ----------------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| is( )             | $("li").is("visible")                                        | 선택한 <li>요소가 보이면 true를 반환합니다.                  |
+| noConflict( )     | var m=$.noConflict( );m("h1").width(100);                    | 선택한 메소드를 사용할 때 $를 앞에 붙여 사용했습니다. $.onConflict( )를 사용하면 $메소드를 변수에 참조시켜 $문자 대신 임의의 문자를 지정하여 사용할 수 있습니다. |
+| get( )            | $("li").get(0).style.color="red";                            | 제이쿼리로 선택한 요소에 get(0)메소드를 적용하면 자바스크립트에 DOM 선택자로 선택한 태그로 인식되어 이전 자바스크립트에 DOM방식을 따릅니다. |
+| each( )/$.each( ) | $("li").each(function( ){ });$.each($("li"), function( ){ }); | 선택한 요소들을 각각 순차적으로 접근해 선택해 옵니다.        |
+| map( )            | 배열 객체.map(함수)                                          | 배열 데이터를 변환시켜 다시 새로운 배열 객체를 만듭니다.     |
 
