--- a/jQuery/2021년 07월 07일 (수) - jquery 객체 조작.md
+++ b/jQuery/2021년 07월 07일 (수) - jquery 객체 조작.md
@@ -437,8 +437,8 @@
 
 14.empty()  /  remove()
 
-* empty : 요소의 내용을 지운다
-* remove : 요소 자체를 삭제
+* empty : 선택된 요소의 하위요소들만 제거
+* remove : 선택된 요소를 포함하여 하위요소들까지 제거
 
 ```html
 <!DOCTYPE html >
