--- a/JavaScript/2021년 06월 25일 (금) - 내장 객체.md
+++ b/JavaScript/2021년 06월 25일 (금) - 내장 객체.md
@@ -149,7 +149,7 @@
 
 * Number 객체의 메소드
 
-| 속성             | 설명                                                   |
+| 메소드           | 설명                                                   |
 | ---------------- | ------------------------------------------------------ |
 | toExponential(n) | 지수 표기법으로 소수점 n자리만큼 문자형 데이터로 반환  |
 | toFixed(n)       | 소수점 n자리만큼 반올림하여 문자형 데이터로 반환       |
